# AWS_PythonProject

./: .gitignore  README.md  package_requirments.txt  setup.cfg
src/platform_cli/: cli.py  config.py
src/platform_cli/aws/: ec2.py  route53.py  s3.py
