[metadata]
name = project-cli
version = 0.0.1
description = AWS CLI project (final assignment)

[options]
packages = find:
package_dir =
    =src
install_requires =
    click
    boto3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    project-cli = platform_cli.cli:cli
